[gd_scene load_steps=9 format=2]

[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/topdown-tank/Spritesheet/onlyObjects_default.png" type="Texture" id=2]
[ext_resource path="res://weapons/ShootWeapon.gd" type="Script" id=3]
[ext_resource path="res://assets/self-made/weapons/Snow_Gun.png" type="Texture" id=4]
[ext_resource path="res://assets/audio/gunshot.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/pistol_reload.mp3" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "muzzle_flash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("MuzzleFlash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MuzzleFlash:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "reload"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 90.0, 0.0, 90.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ null ],
"method": "_stop_reload"
} ]
}

[node name="Gun" type="Node2D"]
script = ExtResource( 3 )
Bullet = ExtResource( 1 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 3, 3, 30, 54 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 15, 0 )

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 27, 0 )
rotation = -1.57741
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/muzzle_flash = SubResource( 1 )
anims/reload = SubResource( 2 )

[node name="ShotAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -6.0
pitch_scale = 2.0

[node name="ReloadAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
